--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "medika-backend",
   "version": "1.0.0",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
+  "scripts": { "start": "node server.js" },
   "dependencies": {
     "express": "^4.18.2",
     "nodemailer": "^6.9.7",
