--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": { "start": "node server.js" },
   "dependencies": {
     "express": "^4.18.2",
-    "nodemailer": "^6.9.7",
+    "@sendgrid/mail": "^7.7.0",
     "xlsx": "^0.18.5",
     "cors": "^2.8.5"
   }
