--- a/package.json
+++ b/package.json
@@ -1,19 +1,29 @@
 {
-  "name": "medika-backend",
+  "name": "manifest-mail-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Send Manifest Excel and PDF via SendGrid",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
+  "keywords": [
+    "manifest",
+    "sendgrid",
+    "excel",
+    "pdf",
+    "logistics"
+  ],
+  "author": "Rajesh",
+  "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.15",
+    "express": "^4.18.2",
+    "pdfkit": "^0.15.0",
     "xlsx": "^0.18.5"
   },
-  "engines": {
-    "node": ">=18"
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
