--- a/package.json
+++ b/package.json
@@ -1,33 +1,15 @@
 {
-  "name": "medika-manifest-server",
+  "name": "manifest-server",
   "version": "1.0.0",
-  "description": "Medika Bazaar Manifest Mail Server - Excel + Ultimate PDF + SendGrid",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
-  "keywords": [
-    "manifest",
-    "sendgrid",
-    "pdf",
-    "excel",
-    "logistics",
-    "medika"
-  ],
-  "author": "Rajesh",
-  "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "pdfkit": "^0.15.0",
+    "pdfkit": "^0.14.0",
     "xlsx": "^0.18.5"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.2"
-  },
-  "engines": {
-    "node": ">=16"
   }
 }
