--- a/package.json
+++ b/package.json
@@ -2,14 +2,12 @@
   "name": "manifest-server",
   "version": "1.0.0",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
+  "scripts": { "start": "node server.js" },
   "dependencies": {
-    "@sendgrid/mail": "^7.7.0",
-    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "pdfkit": "^0.14.0",
-    "xlsx": "^0.18.5"
+    "cors": "^2.8.5",
+    "@sendgrid/mail": "^7.7.0",
+    "xlsx": "^0.18.5",
+    "pdfkit": "^0.14.0"
   }
 }
